# mandelbrot-OpenGL

./: .gitignore  CMakeLists.txt  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  README.md  glad.c  main.cpp  shader.cpp  shader.h
include/: helpers.h  shader.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: helpers.cpp  main.cpp  shader.cpp
